--- a/index.html
+++ b/index.html
@@ -16,80 +16,86 @@
       <img src="Contenu/Logos_Jeux/Overwatch.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
     </header>
 
+
+
     <section class="Arbre">                                           <!-- Conteneur Flex pour l'Arbre -->
+
       <div class="Arbre_Tour Arbre_Tour-3">                             <!-- 1er tour -->
+
         <div class="Arbre_Tour-3_Joueur-1">                             <!-- Conteneur Joueur 1 -->
           <div class="Joueur Joueur-1">                                 <!-- Infos Joueur 1 -->
-            <p class="Pseudo-Joueurs Pseudo-Joueur-1">Joueur 1</p>
-            <p class="Score-Joueurs Score-Joueur-1">0</p>
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-1">Joueur 1</p>
+            <p class="Score-Joueurs Tour-1_Score-Joueur-1">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-1"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-1"></div>
+          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-1"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-2">                             <!-- Conteneur Joueur 2 -->
           <div class="Joueur Joueur-2">                                 <!-- Infos Joueur 2 -->
-            <p class="Pseudo-Joueurs Pseudo-Joueur-2">Joueur 2</p>
-            <p class="Score-Joueurs Score-Joueur-2">0</p>
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-2">Joueur 2</p>
+            <p class="Score-Joueurs Tour-1_Score-Joueur-2">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 2" class="Img-Joueur-2"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-2"></div>
+          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-2"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-3">                             <!-- Conteneur Joueur 3 -->
           <div class="Joueur Joueur-3">                                 <!-- Infos Joueur 3 -->
-            <p class="Pseudo-Joueurs Pseudo-Joueur-3">Joueur 3</p>
-            <p class="Score-Joueurs Score-Joueur-3">0</p>
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-3">Joueur 3</p>
+            <p class="Score-Joueurs Tour-1_Score-Joueur-3">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-3"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-3"></div>
+          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-3"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-4">                             <!-- Conteneur Joueur 4 -->
           <div class="Joueur Joueur-4">                                 <!-- Infos Joueur 4 -->
-            <p class="Pseudo-Joueurs Pseudo-Joueur-4">Joueur 4</p>
-            <p class="Score-Joueurs Score-Joueur-4">0</p>
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-4">Joueur 4</p>
+            <p class="Score-Joueurs Tour-1_Score-Joueur-4">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 4" class="Img-Joueur-4"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-4"></div>
+          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-4"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-5">                             <!-- Conteneur Joueur 5 -->
           <div class="Joueur Joueur-5">                                 <!-- Infos Joueur 5 -->
-            <p class="Pseudo-Joueurs Pseudo-Joueur-5">Joueur 5</p>
-            <p class="Score-Joueurs Score-Joueur-5">0</p>
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-5">Joueur 5</p>
+            <p class="Score-Joueurs Tour-1_Score-Joueur-5">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-5"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-5"></div>
+          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-5"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-6">                             <!-- Conteneur Joueur 6 -->
           <div class="Joueur Joueur-6">                                 <!-- Infos Joueur 6 -->
-            <p class="Pseudo-Joueurs Pseudo-Joueur-6">Joueur 6</p>
-            <p class="Score-Joueurs Score-Joueur-6">0</p>
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-6">Joueur 6</p>
+            <p class="Score-Joueurs Tour-1_Score-Joueur-6">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 6" class="Img-Joueur-6"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-6"></div>
+          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-6"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-7">                             <!-- Conteneur Joueur 7 -->
           <div class="Joueur Joueur-7">                                 <!-- Infos Joueur 7 -->
-            <p class="Pseudo-Joueurs Pseudo-Joueur-7">Joueur 7</p>
-            <p class="Score-Joueurs Score-Joueur-7">0</p>
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-7">Joueur 7</p>
+            <p class="Score-Joueurs Tour-1_Score-Joueur-7">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 7" class="Img-Joueur-7"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-7"></div>
+          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-7"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-8">                             <!-- Conteneur Joueur 8 -->
           <div class="Joueur Joueur-8">                                 <!-- Infos Joueur 8 -->
-            <p class="Pseudo-Joueurs Pseudo-Joueur-8">Joueur 8</p>
-            <p class="Score-Joueurs Score-Joueur-8">0</p>
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-8">Joueur 8</p>
+            <p class="Score-Joueurs Tour-1_Score-Joueur-8">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 8" class="Img-Joueur-8"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-8"></div>
+          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-8"></div>
         </div>
       </div>
+
+
 
       <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tours-1">             <!-- Conteneur Flex pour les Connecteurs entre joueurs du 1er Tour-->
         <div class="Conteneur-Connecteurs Conteneur-Connecteurs-1"><!-- 1er Connecteurs -->
@@ -113,82 +119,59 @@
         </div>
       </div>
 
+
+
       <div class="Arbre_Tour Arbre_Tour-2">
-        <div class="Joueur">
-          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-1"></div>
+        <div class="Arbre_Tour-2_Vainqueur-1">                             <!-- Conteneur Joueur 1 -->
+          <div class="Connecteur-Bas-Joueur Tour-2_Connecteur-Haut-Vainqueur-1"></div>
+          <div class="Joueur Vainqueur-1">                                 <!-- Infos Joueur 1 -->
+            <p class="Pseudo-Joueurs Tour-2_Pseudo-Vainqueur-1">Joueur 1</p>
+            <p class="Score-Joueurs Tour-2_Score-Vainqueur-1">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-1"> -->
+          </div>
+          <div class="Connecteur-Bas-Joueur Tour-2_Connecteur-Bas-Vainqueur-1"></div>
         </div>
 
-        <div class="Joueur">
-          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-3"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-13">
+        <div class="Arbre_Tour-3_Vainqueur-2">                             <!-- Conteneur Joueur 2 -->
+          <div class="Joueur Joueur-2">                                 <!-- Infos Joueur 2 -->
+            <p class="Pseudo-Joueurs Tour-2_Pseudo-Vainqueur-2">Joueur 2</p>
+            <p class="Score-Joueurs Tour-2_Score-Vainqueur-2">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 2" class="Img-Joueur-2"> -->
+          </div>
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Vainqueur-2"></div>
+        </div>
+
+        <div class="Arbre_Tour-3_Joueur-3">                             <!-- Conteneur Joueur 3 -->
+          <div class="Joueur Joueur-3">                                 <!-- Infos Joueur 3 -->
+            <p class="Pseudo-Joueurs Tour-2_Pseudo-Joueur-3">Joueur 3</p>
+            <p class="Score-Joueurs Tour-2_Score-Joueur-3">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-3"> -->
+          </div>
           <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-3"></div>
         </div>
 
-        <div class="Joueur">
-          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-5"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-15">
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-5"></div>
+        <div class="Arbre_Tour-3_Joueur-4">                             <!-- Conteneur Joueur 4 -->
+          <div class="Connecteur-Bas-Joueur Connecteur-Haut-Joueur-4"></div>
+          <div class="Joueur Joueur-4">                                 <!-- Infos Joueur 4 -->
+            <p class="Pseudo-Joueurs Tour-2_Pseudo-Joueur-4">Joueur 4</p>
+            <p class="Score-Joueurs Tour-2_Score-Joueur-4">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 4" class="Img-Joueur-4"> -->
+          </div>
+          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-4"></div>
         </div>
+      </div>
 
-        <div class="Joueur">
-          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-7"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 7" class="Img-Joueur-17">
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-7"></div>
-        </div>
-
-      </div>                        <!-- 2eme tour -->
-
-      <div class="Arbre_Connecteurs Arbre_Liens-2">
-        <div class="Arbre_Liens_Conteneur Arbre_Liens-2_Conteneur-1">
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-1_Connecteur-Gauche"></div>
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-1_Connecteur-Droit"></div>
-        </div>
-
-        <div class="Arbre_Liens_Conteneur Arbre_Liens-2_Conteneur-2">
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-2_Connecteur-Gauche"></div>
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-2_Connecteur-Gauche"></div>
-        </div>
-
-        <div class="Arbre_Liens_Conteneur Arbre_Liens-2_Conteneur-3">
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-3_Connecteur-Gauche"></div>
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-2_Conteneur-3_Connecteur-Gauche"></div>
-        </div>
+      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tours-2">
       </div>
 
       <div class="Arbre_Tour Arbre_Tour-1">
-        <div class="Joueur">
-          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-1"></div>
-        </div>
+      </div>
 
-        <div class="Joueur">
-          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-5"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-15">
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-5"></div>
-        </div>
-      </div>                        <!-- 3eme tour -->
-
-      <div class="Arbre_Connecteurs Arbre_Liens-3">
-        <div class="Arbre_Liens_Conteneur Arbre_Liens-3_Conteneur-1">
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-3_Conteneur-1_Connecteur-Gauche"></div>
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-3_Conteneur-1_Connecteur-Droit"></div>
-        </div>
-
-        <div class="Arbre_Liens_Conteneur Arbre_Liens-3_Conteneur-2">
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-3_Conteneur-2_Connecteur-Gauche"></div>
-          <div class="Arbre_Liens_Conteneur_Connecteur Arbre_Liens-3_Conteneur-2_Connecteur-Gauche"></div>
-        </div>
+      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tours-3">
       </div>
 
       <div class="Arbre_Tour Arbre_Tour-0">
-        <div class="Joueur">
-          <div class="Connecteur-Haut-Joueur Connecteur-Haut-Joueur-1"></div>
-          <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-11">
-        </div>
-      </div>                        <!-- Finale -->
+      </div>
     </section>
 
     <a href="Contenu/test/index.html">TEST</a>
