--- a/index.html
+++ b/index.html
@@ -24,154 +24,209 @@
 
         <div class="Arbre_Tour-3_Joueur-1">                             <!-- Conteneur Joueur 1 -->
           <div class="Joueur Joueur-1">                                 <!-- Infos Joueur 1 -->
-            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-1">Joueur 1</p>
-            <p class="Score-Joueurs Tour-1_Score-Joueur-1">0</p>
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-1">Joueur 1</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-1"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-1"></div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-1"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-2">                             <!-- Conteneur Joueur 2 -->
           <div class="Joueur Joueur-2">                                 <!-- Infos Joueur 2 -->
-            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-2">Joueur 2</p>
-            <p class="Score-Joueurs Tour-1_Score-Joueur-2">0</p>
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-2">Joueur 2</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-2">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 2" class="Img-Joueur-2"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-2"></div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-2"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-3">                             <!-- Conteneur Joueur 3 -->
           <div class="Joueur Joueur-3">                                 <!-- Infos Joueur 3 -->
-            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-3">Joueur 3</p>
-            <p class="Score-Joueurs Tour-1_Score-Joueur-3">0</p>
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-3">Joueur 3</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-3">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-3"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-3"></div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-3"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-4">                             <!-- Conteneur Joueur 4 -->
           <div class="Joueur Joueur-4">                                 <!-- Infos Joueur 4 -->
-            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-4">Joueur 4</p>
-            <p class="Score-Joueurs Tour-1_Score-Joueur-4">0</p>
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-4">Joueur 4</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-4">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 4" class="Img-Joueur-4"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-4"></div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-4"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-5">                             <!-- Conteneur Joueur 5 -->
           <div class="Joueur Joueur-5">                                 <!-- Infos Joueur 5 -->
-            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-5">Joueur 5</p>
-            <p class="Score-Joueurs Tour-1_Score-Joueur-5">0</p>
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-5">Joueur 5</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-5">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 5" class="Img-Joueur-5"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-5"></div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-5"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-6">                             <!-- Conteneur Joueur 6 -->
           <div class="Joueur Joueur-6">                                 <!-- Infos Joueur 6 -->
-            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-6">Joueur 6</p>
-            <p class="Score-Joueurs Tour-1_Score-Joueur-6">0</p>
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-6">Joueur 6</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-6">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 6" class="Img-Joueur-6"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-6"></div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-6"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-7">                             <!-- Conteneur Joueur 7 -->
           <div class="Joueur Joueur-7">                                 <!-- Infos Joueur 7 -->
-            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-7">Joueur 7</p>
-            <p class="Score-Joueurs Tour-1_Score-Joueur-7">0</p>
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-7">Joueur 7</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-7">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 7" class="Img-Joueur-7"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-7"></div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-7"></div>
         </div>
 
         <div class="Arbre_Tour-3_Joueur-8">                             <!-- Conteneur Joueur 8 -->
           <div class="Joueur Joueur-8">                                 <!-- Infos Joueur 8 -->
-            <p class="Pseudo-Joueurs Tour-1_Pseudo-Joueur-8">Joueur 8</p>
-            <p class="Score-Joueurs Tour-1_Score-Joueur-8">0</p>
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-8">Joueur 8</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-8">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 8" class="Img-Joueur-8"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-1_Connecteur-Bas-Joueur-8"></div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-8"></div>
         </div>
       </div>
 
 
 
-      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tours-1">             <!-- Conteneur Flex pour les Connecteurs entre joueurs du 1er Tour-->
+      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tour-3">             <!-- Conteneur Flex pour les Connecteurs entre joueurs du 1er Tour-->
         <div class="Conteneur-Connecteurs Conteneur-Connecteurs-1"><!-- 1er Connecteurs -->
-          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
-          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
         </div>
 
         <div class="Conteneur-Connecteurs Conteneur-Connecteurs-2">
-          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
-          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
         </div>
 
         <div class="Conteneur-Connecteurs Conteneur-Connecteurs-3">
-          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
-          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
         </div>
 
         <div class="Conteneur-Connecteurs Conteneur-Connecteurs-4">
-          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
-          <div class="Arbre_Conteneur-Connecteurs-Inter-Tours-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-3_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
         </div>
       </div>
 
 
 
-      <div class="Arbre_Tour Arbre_Tour-2">
-        <div class="Arbre_Tour-2_Vainqueur-1">                             <!-- Conteneur Joueur 1 -->
-          <div class="Connecteur-Bas-Joueur Tour-2_Connecteur-Haut-Vainqueur-1"></div>
-          <div class="Joueur Vainqueur-1">                                 <!-- Infos Joueur 1 -->
-            <p class="Pseudo-Joueurs Tour-2_Pseudo-Vainqueur-1">Joueur 1</p>
+      <div class="Arbre_Tour Arbre_Tour-2">                             <!-- 1er tour -->
+
+        <div class="Arbre_Tour-2_Vainqueur-1">                             <!-- Conteneur Vainqueur 1 -->
+          <div class="Connecteur-Joueur Tour-2_Connecteur-Haut-Vainqueur-1"></div>
+          <div class="Joueur Vainqueur-1">                                 <!-- Infos Vainqueur 1 -->
+            <p class="Pseudo-Joueurs Tour-2_Pseudo-Vainqueur-1">Vainqueur 1</p>
             <p class="Score-Joueurs Tour-2_Score-Vainqueur-1">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-1"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Tour-2_Connecteur-Bas-Vainqueur-1"></div>
+          <div class="Connecteur-Joueur Tour-2_Connecteur-Bas-Vainqueur-1"></div>
         </div>
 
-        <div class="Arbre_Tour-3_Vainqueur-2">                             <!-- Conteneur Joueur 2 -->
-          <div class="Joueur Joueur-2">                                 <!-- Infos Joueur 2 -->
-            <p class="Pseudo-Joueurs Tour-2_Pseudo-Vainqueur-2">Joueur 2</p>
+        <div class="Arbre_Tour-2_Vainqueur-2">                             <!-- Conteneur Vainqueur 2 -->
+          <div class="Connecteur-Joueur Tour-2_Connecteur-Haut-Vainqueur-2"></div>
+          <div class="Joueur Vainqueur-2">                                 <!-- Infos Vainqueur 2 -->
+            <p class="Pseudo-Joueurs Tour-2_Pseudo-Vainqueur-2">Vainqueur 2</p>
             <p class="Score-Joueurs Tour-2_Score-Vainqueur-2">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 2" class="Img-Joueur-2"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Vainqueur-2"></div>
+          <div class="Connecteur-Joueur Tour-2_Connecteur-Bas-Vainqueur-2"></div>
         </div>
 
-        <div class="Arbre_Tour-3_Joueur-3">                             <!-- Conteneur Joueur 3 -->
-          <div class="Joueur Joueur-3">                                 <!-- Infos Joueur 3 -->
-            <p class="Pseudo-Joueurs Tour-2_Pseudo-Joueur-3">Joueur 3</p>
-            <p class="Score-Joueurs Tour-2_Score-Joueur-3">0</p>
+        <div class="Arbre_Tour-2_Vainqueur-3">                             <!-- Conteneur Vainqueur 3 -->
+          <div class="Connecteur-Joueur Tour-2_Connecteur-Haut-Vainqueur-3"></div>
+          <div class="Joueur Tour-2_Vainqueur-3">                                 <!-- Infos Vainqueur 3 -->
+            <p class="Pseudo-Joueurs Tour-2_Pseudo-Vainqueur-3">Vainqueur 3</p>
+            <p class="Score-Joueurs Tour-2_Score-Vainqueur-3">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 3" class="Img-Joueur-3"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-3"></div>
+          <div class="Connecteur-Joueur Tour-2_Connecteur-Bas-Vainqueur-3"></div>
         </div>
 
-        <div class="Arbre_Tour-3_Joueur-4">                             <!-- Conteneur Joueur 4 -->
-          <div class="Connecteur-Bas-Joueur Connecteur-Haut-Joueur-4"></div>
-          <div class="Joueur Joueur-4">                                 <!-- Infos Joueur 4 -->
-            <p class="Pseudo-Joueurs Tour-2_Pseudo-Joueur-4">Joueur 4</p>
-            <p class="Score-Joueurs Tour-2_Score-Joueur-4">0</p>
+        <div class="Arbre_Tour-2_Vainqueur-4">                             <!-- Conteneur Joueur 4 -->
+          <div class="Connecteur-Joueur Tour-2_Connecteur-Haut-Vainqueur-4"></div>
+          <div class="Joueur Tour-2_Vainqueur-4">                                 <!-- Infos Joueur 4 -->
+            <p class="Pseudo-Joueurs Tour-2_Pseudo-Vainqueur-4">Vainqueur 4</p>
+            <p class="Score-Joueurs Tour-2_Score-Vainqueur-4">0</p>
             <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 4" class="Img-Joueur-4"> -->
           </div>
-          <div class="Connecteur-Bas-Joueur Connecteur-Bas-Joueur-4"></div>
+          <div class="Connecteur-Joueur Tour-2_Connecteur-Bas-Vainqueur-4"></div>
         </div>
       </div>
 
-      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tours-2">
+
+
+      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tour-2">             <!-- Conteneur Flex pour les Connecteurs entre joueurs du 1er Tour-->
+        <div class="Conteneur-Connecteurs Conteneur-Connecteurs-1"><!-- 1er Connecteurs -->
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-2_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-2_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
+        </div>
+
+        <div class="Conteneur-Connecteurs Conteneur-Connecteurs-2">
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-2_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-2_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
+        </div>
       </div>
 
-      <div class="Arbre_Tour Arbre_Tour-1">
+
+
+      <div class="Arbre_Tour Arbre_Tour-1">                             <!-- 1er tour -->
+
+        <div class="Arbre_Tour-1_Vainqueur-1">                             <!-- Conteneur Vainqueur 1 -->
+          <div class="Connecteur-Joueur Tour-1_Connecteur-Haut-Vainqueur-1"></div>
+          <div class="Joueur Vainqueur-1">                                 <!-- Infos Vainqueur 1 -->
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Vainqueur-1">Vainqueur 1</p>
+            <p class="Score-Joueurs Tour-1_Score-Vainqueur-1">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-1"> -->
+          </div>
+          <div class="Connecteur-Joueur Tour-1_Connecteur-Bas-Vainqueur-1"></div>
+        </div>
+
+        <div class="Arbre_Tour-1_Vainqueur-2">                             <!-- Conteneur Vainqueur 2 -->
+          <div class="Connecteur-Joueur Tour-1_Connecteur-Haut-Vainqueur-2"></div>
+          <div class="Joueur Vainqueur-2">                                 <!-- Infos Vainqueur 2 -->
+            <p class="Pseudo-Joueurs Tour-1_Pseudo-Vainqueur-2">Vainqueur 2</p>
+            <p class="Score-Joueurs Tour-1_Score-Vainqueur-2">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 2" class="Img-Joueur-2"> -->
+          </div>
+          <div class="Connecteur-Joueur Tour-1_Connecteur-Bas-Vainqueur-2"></div>
+        </div>
+
       </div>
 
-      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tours-3">
+
+
+      <div class="Arbre_Conteneur-Connecteurs-Inter-Tours Arbre_Conteneur-Connecteurs-Inter-Tour-2">             <!-- Conteneur Flex pour les Connecteurs entre joueurs du 1er Tour-->
+        <div class="Conteneur-Connecteurs Conteneur-Connecteurs-1"><!-- 1er Connecteurs -->
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Gauche"></div>
+          <div class="Arbre_Conteneur-Connecteurs-Inter-Tour-1_Conteneur-Connecteurs_Connecteur Conteneur-Connecteurs-1_Connecteur-Droite"></div>
+        </div>
       </div>
 
-      <div class="Arbre_Tour Arbre_Tour-0">
+
+      <div class="Arbre_Tour Arbre_Tour-0">                             <!-- 1er tour -->
+
+        <div class="Arbre_Tour-0_Vainqueur-1">                             <!-- Conteneur Vainqueur 1 -->
+          <div class="Connecteur-Joueur Tour-0_Connecteur-Haut-Vainqueur-1"></div>
+          <div class="Joueur Vainqueur-1">                                 <!-- Infos Vainqueur 1 -->
+            <p class="Pseudo-Joueurs Tour-0_Pseudo-Vainqueur-1">Vainqueur 1</p>
+            <p class="Score-Joueurs Tour-0_Score-Vainqueur-1">0</p>
+            <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-1"> -->
+          </div>
+        </div>
+
       </div>
+
     </section>
 
     <a href="Contenu/test/index.html">TEST</a>
