--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@
       <p class="Parametres-Onglet_Desc-Tournois">Description du tournois</p>
       <p class="Parametres-Onglet_Hergeur-Tournois">Tournois Hébergé par...</p>
       <p class="Parametres-Onglet_Jeux-Tournois">Le jeux</p>
+      <p>Nombre de joueurs : </p>
+      <input type="number" name="NbJoueur" value="8">
       <button type="button" name="Parametres-Appliquer">Appliquer</button>
     </section>
 
