Class Joueus + parametres
+ Définitions d'une pré-classe pour les input

--- a/index.html
+++ b/index.html
@@ -260,14 +260,7 @@
 
 
     <section class="Onglets Joueurs-Onglet">
-      <p class="Joueurs-Onglet_Joueur-1">Joueur 1</p>
-      <p class="Joueurs-Onglet_Joueur-2">Joueur 2</p>
-      <p class="Joueurs-Onglet_Joueur-3">Joueur 3</p>
-      <p class="Joueurs-Onglet_Joueur-4">Joueur 4</p>
-      <p class="Joueurs-Onglet_Joueur-5">Joueur 5</p>
-      <p class="Joueurs-Onglet_Joueur-6">Joueur 6</p>
-      <p class="Joueurs-Onglet_Joueur-7">Joueur 7</p>
-      <p class="Joueurs-Onglet_Joueur-8">Joueur 8</p>
+      <input type="text" name="Joueur" value="Joueur" class="txtjoueurs">
       <button type="button" name="Joueurs-Appliquer">Appliquer</button>
     </section>
 
@@ -278,8 +271,8 @@
       <p class="Parametres-Onglet_Hergeur-Tournois">Tournois Hébergé par...</p>
       <p class="Parametres-Onglet_Jeux-Tournois">Le jeux</p>
       <p>Nombre de joueurs : </p>
-      <input type="number" name="NbJoueur" value="8">
-      <button type="button" name="Parametres-Appliquer">Appliquer</button>
+      <input type="number" name="NbJoueur" value="8" class="nbjoueurs">
+      <button type="button" name="Parametres-Appliquer" class="*btn_app_parametres">Appliquer</button>
     </section>
 
 
