Modif js + html
+rectification nom de class du bouton appliquer des params
+reglage de l'update pour le nombre de joueur

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <p class="Parametres-Onglet_Jeux-Tournois">Le jeux</p>
       <p>Nombre de joueurs : </p>
       <input type="number" name="NbJoueur" value="8" class="nbjoueurs">
-      <button type="button" name="Parametres-Appliquer" class="*btn_app_parametres">Appliquer</button>
+      <button type="button" name="Parametres-Appliquer" class="btn_app_parametres">Appliquer</button>
     </section>
 
 
