Palette couleurs + Template
+ Modification des palettes de couleurs
+ Différents template pour le js

--- a/index.html
+++ b/index.html
@@ -271,8 +271,6 @@
       <p class="Parametres-Onglet_Hergeur-Tournois">Tournois Hébergé par...</p>
       <p class="Parametres-Onglet_Jeux-Tournois">Le jeux</p>
       <p>Nombre de joueurs : </p>
-      <input type="number" name="NbJoueur" value="8" class="nbjoueurs">
-      <button type="button" name="Parametres-Appliquer" class="btn_app_parametres">Appliquer</button>
     </section>
 
 
@@ -281,5 +279,13 @@
     </section>
 
     <footer class="Pied-Page"></footer>
+
+    <template id="boutton-nbjoueurs">
+      <input type="number" name="NbJoueur" value="8" class="nbjoueurs">
+    </template>
+
+    <template id="boutton-app-para">
+      <button type="button" name="Parametres-Appliquer" class="btn_app_parametres">Appliquer</button>
+    </template>
   </body>
 </html>
