--- a/index.html
+++ b/index.html
@@ -284,5 +284,13 @@
     <template id="boutton-nomjoueurs">
       <input type="text" name="Joueur" value="Joueur" class="txtjoueurs">
     </template>
+
+    <template id="Joueur">
+      <div class="Joueur">                                 <!-- Infos Joueur 1 -->
+        <p class="Pseudo-Joueurs">Joueur</p>
+        <p class="Score-Joueurs">0</p>
+        <!-- <img src="Contenu/Logo_Joueur.png" alt="Joueur 1" class="Img-Joueur-1"> -->
+      </div>
+    </template>
   </body>
 </html>
