--- a/NEW/index.html
+++ b/NEW/index.html
@@ -21,7 +21,35 @@
             <p class="Entete_Infos_Desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-        <img src="../Contenu/Logos/Logos_Jeux/Overwatch.png" alt="Logo Jeux">
+        <img src="../Contenu/Logos/Logos_Jeux/logo_OW.png" alt="Logo Jeux" class="Entete_Logo-Jeux">
     </header>
+
+    <nav class="Nav">
+      <ul class="Nav_Ul">
+        <li class="Nav_Arbre"><p>Arbre</p></li>
+        <li class="Nav_Joueurs"><p>Joueurs</p></li>
+        <li class="Nav_Parametres"><p>Paramètres</p></li>
+      </ul>
+      <div class="Nav_Fin">
+      </div>
+    </nav>
+
+    <section class="Onglets Onglet_Arbre">
+      <div class="Arbre_Tour">
+
+        <div class="Bloc-Joueurs">
+          <div class="Bloc-Joueurs_Infos">
+            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-1">Joueur 1</p>
+            <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
+          </div>
+          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-1"></div>
+        </div>
+
+      </div>
+    </section>
+
+    <footer class="Pied-Page">
+
+    </footer>
   </body>
 </html>
