--- a/NEW/index.html
+++ b/NEW/index.html
@@ -26,12 +26,11 @@
 
     <nav class="Nav">
       <ul class="Nav_Ul">
-        <li class="Nav_Arbre"><p>Arbre</p></li>
+        <li class="Nav_Arbre Nav_Actif"><p>Arbre</p></li>
         <li class="Nav_Joueurs"><p>Joueurs</p></li>
         <li class="Nav_Parametres"><p>Paramètres</p></li>
+        <li id="Nav_Fin"></li>
       </ul>
-      <div class="Nav_Fin">
-      </div>
     </nav>
 
     <section class="Onglets Onglet_Arbre">
