NEW Bloc-Joueurs
+ Template Bloc-Joueurs TERMINÉ

--- a/NEW/index.html
+++ b/NEW/index.html
@@ -36,13 +36,6 @@
     <section class="Onglets Onglet_Arbre">
       <div class="Arbre_Tour">
 
-        <div class="Bloc-Joueurs">
-          <div class="Bloc-Joueurs_Infos">
-            <p class="Pseudo-Joueurs Tour-3_Pseudo-Joueur-1">Joueur 1</p>
-            <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
-          </div>
-          <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-1"></div>
-        </div>
 
       </div>
     </section>
@@ -51,4 +44,14 @@
 
     </footer>
   </body>
+
+  <template id="Template_Bloc-Joueurs">
+    <div class="Bloc-Joueurs">
+      <div class="Bloc-Joueurs_Infos">
+        <p class="Bloc-Joueurs_Infos_Pseudo">Joueur</p>
+        <p class="Score-Joueurs Tour-3_Score-Joueur-1">0</p>
+      </div>
+      <div class="Connecteur-Joueur Tour-3_Connecteur-Bas-Joueur-1"></div>
+    </div>
+  </template>
 </html>
